# rmrfrs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  release.yml
rmrfrs/: Cargo.toml
rmrfrs-lib/: Cargo.toml
rmrfrs-lib/src/: lib.rs
rmrfrs-ui/: Cargo.toml
rmrfrs-ui/src/: main.rs
rmrfrs/src/: main.rs
scripts/: release-version.sh
