[package]
name = "rmrfrs-ui"
version = "0.8.0"
authors = ["Triet Trinh <contact@trinhminhtriet.com>"]
description = """
rmrfrs-ui is a filesystem cleaning tool that recursively searches directories
for known project structures and allows you to clean them of unnecessary files
like build artifacts.
"""
documentation = "https://github.com/trinhminhtriet/rmrfrs"
homepage = "https://github.com/trinhminhtriet/rmrfrs"
repository = "https://github.com/trinhminhtriet/rmrfrs"
edition = "2021"
license = "MIT"
keywords = ["clean", "cleanup", "delete", "free"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.7"

[dependencies.rmrfrs-lib]
path = "../rmrfrs-lib"
version = "0.8"

[profile.release]
incremental = false
lto = true
codegen-units = 1
