[package]
name = "rmrfrs"
version = "0.8.1"
authors = ["Triet Trinh <contact@trinhminhtriet.com>"]
description = """
rmrfrs is a filesystem cleaning tool that scans directories for known project structures, 
identifying unnecessary files to show potential space savings.
"""
documentation = "https://github.com/trinhminhtriet/rmrfrs"
homepage = "https://github.com/trinhminhtriet/rmrfrs"
repository = "https://github.com/trinhminhtriet/rmrfrs"
readme = "../README.md"
categories = ["command-line-utilities"]
license = "MIT"
keywords = ["clean", "cleanup", "delete", "free"]
exclude = ["tests"]
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

[dependencies.rmrfrs-lib]
path = "../rmrfrs-lib"
version = "0.8"
