[package]
name = "rmrfrs"
version = "0.8.5"
authors = ["Triet Trinh <contact@trinhminhtriet.com>"]
description = """
rmrfrs is a powerful filesystem cleaning tool designed to optimize storage by identifying and removing unnecessary files within known project structures.
"""
homepage = "https://trinhminhtriet.com"
repository = "https://github.com/trinhminhtriet/rmrfrs"
readme = "../README.md"
categories = ["command-line-utilities"]
license = "MIT"
keywords = ["clean", "cleanup", "delete", "free"]
exclude = ["tests"]
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

[dependencies.rmrfrs-lib]
path = "../rmrfrs-lib"
version = "0.8"
